# c-

./: .gitignore  CMakeLists.txt  snake_game.cpp
cl/: CMakeLists.txt  main.cpp  my_header.h  vcpkg.json
con1/: CMakeLists.txt
con1v/: CMakeLists.txt  MySQLDatabase.cpp  MySQLDatabase.h  conandata.yml  main.cpp
con2/: CMakeLists.txt  conandata.yml
con3/: CMakeLists.txt  conandata.yml
con4/: CMakeLists.txt  conandata.yml
con5/: CMakeLists.txt
con8/: CMakeLists.txt
conan/: CMakeLists.txt
cpu/: CMakeLists.txt  main.cpp
cpu/win-build/: CMakeCache.txt  Makefile  cmake_install.cmake
first/: CMakeLists.txt  CMakeSettings.json  vcpkg-configuration.json  vcpkg.json
k1/: CMakeLists.txt  main.cpp
k2/: CMakeLists.txt  conandata.yml
k3/: CMakeLists.txt  conandata.yml  main.cpp  test.cpp  test.h
ku/: CMakeLists.txt  library.h
learn/: CMakeLists.txt  main.cpp
mysql/: CMakeLists.txt  conandata.yml
oop/: main.cpp  my_class.cpp  my_header.h
tools/: CMakeLists.txt  http_request.cpp
